bugfix: incorrect row gap

--- a/CSS/labeltemplates/specific/CRY1100.css
+++ b/CSS/labeltemplates/specific/CRY1100.css
@@ -19,5 +19,7 @@
 
   --top-margin: 0.63in;
   --side-margin: 0.70in;
+
+  --row-gap: 0in;
 }
 
